# cfpages-prune

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deletePreviewDeployments.py  pyproject.toml
.github/workflows/: main.yml  release-tag.yml  test.yml
cf_pages_delete_previews/: __init__.py  cli.py  config.py  lib.py
tests/: test_cli.py  test_config.py  test_lib.py
