[tool.poetry]
name = "cfpages-prune"
version = "0.1.0"
description = "Delete preview deployments of Cloudflare Pages across an entire Cloudflare account."
authors = ["Karl Dreher <karldreher@outlook.com>"]
license = "MIT"
packages = [
    {include = "cf_pages_delete_previews"}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.9"


[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cfpages-prune = 'cf_pages_delete_previews.cli:main'

[tool.semantic_release]
version_variable = [
    "cf_pages_delete_previews/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
