[tool.poetry]
name = "cfpages-prune"
version = "1.2.0"
description = "Delete preview deployments of Cloudflare Pages across an entire Cloudflare account."
authors = ["Karl Dreher <karldreher@outlook.com>"]
license = "MIT"
packages = [
    {include = "cf_pages_delete_previews"}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pylint = "^3.2.7"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
python-semantic-release = "9.8.8"



[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cfpages-prune = 'cf_pages_delete_previews.cli:main'

[tool.semantic_release]
version_variables = ["cf_pages_delete_previews/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]

build_command = "pip install poetry && poetry build"

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.branches.preview]
# this is only here to get previews of release bumps
match = ".+"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"